--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,11 @@ flutter_launcher_icons:
   adaptive_icon_background: "#ffffff"
   min_sdk_android: 21
   remove_alpha_ios: true
+  web:
+    generate: true
+    image_path: "assets/images/logo.jpg"
+    background_color: "#ffffff"
+    theme_color: "#ffffff"
 
 flutter_native_splash:
   color: "#ffffff"
